Creacion del nav, header y la seccion de categorias

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,62 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
-  <script type="module" src="./index.js"></script>
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+  <script type="module" src="./js/index.js"></script>
 </head>
 <body>
+  <section class="topbar">
+    <a href="#logo_kompi#"><img src="./assets/logo_versioncolor.png" alt="Logo-kompi"></a>
+    <nav class="topbar-nav">
+      <a href="#Adopcion">Adopción</a>
+      <a href="#Categorias">Categorias</a>
+      <a href="#SobreNosotros">Sobre Nosotros</a>
+      <a href="#Like"><img src="./assets/like-svgrepo-com.svg" alt="Like-icon"></a>
+      <div class="vertical-line"></div>
+      <a href="#LogIn">Iniciar Sesión</a>
+    </nav>
+  </section>
 
+  <header class="header">
+    <div class="header-content">
+        <div class="header-content-h1">
+          <h1>Mi raza favorita es: <br>Adoptado</h1>
+        </div>
+        <div class="header-content-h3">
+          <h3>Kompi el buscador de animales más grande de la red de España</h3>
+        </div>
+    </div>
+  </header>
+
+    <section class="animal-categories">
+      <h2>¿Qué buscas?</h2>
+      <div class="animal-categories-icons">
+        <div class="dogs">
+          <a href=""> <img src="./assets/dog.svg" alt=""></a>
+        </div>
+        <div class="cats">
+          <a href=""><img src="./assets/cat.svg" alt=""></a>
+        </div>
+        <div class="rodents">
+          <a href=""> <img src="./assets/rodent.svg" alt=""></a>
+        </div>
+        <div class="birds">
+          <a href=""> <img src="./assets/bird.svg" alt=""></a>
+        </div>
+        <div class="reptiles">
+          <a href=""><img src="./assets/reptiles.svg" alt=""></a>
+        </div>
+      </div>  
+    </section>
+
+    <section class="prueba">
+
+    </section>
 </body>
 </html>
