Creacion de muestrario de animales en adopción y el contador

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,52 @@
       </div>  
     </section>
 
+    <section class="animal-adoptions">
+      <div class="animal-adoptions-text">
+        <h2>Animales en adopción</h2>
+        <p>Aquí tienes algunas de las últimas mascotas en adopción</p>
+      </div>
+
+      <div class="animal-adoptions-cards">
+        <div class="card">
+          <img class="card-img" src="./assets/bordercollie_smiling.jpg" alt="Nala-img">
+          <h3 class="card-name">Nala</h3>
+        </div>
+        <div class="card">
+          <img class="card-img" src="./assets/imgYorkshire.jpg" alt="Chico-img">
+          <h3 class="card-name">Chico</h3>
+        </div>
+        <div class="card">
+          <img class="card-img" src="./assets/imgSleapingCat.jpg" alt="Coco-img">
+          <h3 class="card-name">Coco</h3>
+        </div>
+        <div class="card">
+          <img class="card-img" src="./assets/whitebrown_hamster.jpg" alt="Gus-img">
+          <h3 class="card-name">Gus</h3>
+        </div>
+        <div class="card-extra">
+          <img class="card-logo" src="./assets/Icono_logo.svg" alt="logo-img">
+          <p class="card-text">+315 mascotas disponibles en kompi</p>
+          <a class="card-link" href="#VerTodas">VER TODAS</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="counter">
+      <div class="counter-container">
+        <div class="counter-display">811</div>
+        <p class="counter-text">adoptadas</p>
+      </div>
+      <div class="counter-container">
+        <div class="counter-display">319</div>
+        <p class="counter-text">en adopción</p>
+      </div>
+      <div class="counter-container">
+        <div class="counter-display">7</div>
+        <p class="counter-text">colaboradoras</p>
+      </div>
+    </section>
+
     <section class="prueba">
 
     </section>
