funcionalidad login y signin anadida

--- a/src/authprove.html
+++ b/src/authprove.html
@@ -37,7 +37,7 @@
 
   <!--Firebase scripts-->
 
-<script type="module" src="./js/index.js"></script>
+<!--<script type="module" src="./js/index.js"></script>-->
 
 </body>
 </html>
