--- a/src/login.html
+++ b/src/login.html
@@ -21,13 +21,14 @@
       <p>E-MAIL</p>
       <input class="input-email">
       <p>CONTRASEÑA</p>
-      <input class="input-password">
+      <input class="input-password" type="password">
       <div class="button btn-login-email"><span>Continuar</span></div>
       <div class="button btn-login-google"><img class="google" src="./assets/icons/icon_google.png"><span>Inicia sesión con Google</span></div>
       <div class="button btn-login-facebook"><img class="google" src="./assets/icons/icon_facebook.png"><span>Inicia sesión con Facebook</span></div>
     </div>
-    <p>¿No tienes una cuenta? <a class="link-signin" href="#">Regístrate</a></p>
+    <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
 
+  <script type="module" src="./js/login.js"></script>
 </body>
 </html>
