--- a/src/signin.html
+++ b/src/signin.html
@@ -21,15 +21,15 @@
       <p>E-MAIL</p>
       <input class="input-email">
       <p>CONTRASEÑA</p>
-      <input class="input-password">
+      <input class="input-password" type="password">
       <p>COMPRUEBA TU CONTRASEÑA</p>
-      <input class="input-password">
+      <input class="input-password-check" type="password">
       <div class="button btn-login-email"><span>Continuar</span></div>
       <div class="button btn-login-google"><img class="google" src="./assets/icons/icon_google.png"><span>Regístrate con Google</span></div>
       <div class="button btn-login-facebook"><img class="google" src="./assets/icons/icon_facebook.png"><span>Regístrate con Facebook</span></div>
     </div>
-    <p>¿No tienes una cuenta? <a class="link-signin" href="#">Regístrate</a></p>
   </div>
 
+  <script type="module" src="./js/signin.js"></script>
 </body>
 </html>
