versión final login y sign in

--- a/src/login.html
+++ b/src/login.html
@@ -8,23 +8,23 @@
   <!--Font-Family: Dosis -->
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
     <!--Font-Family: Open Sans and Lato -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <img class="img-dog-login" src="./assets/images/foto_perro.png">
+  <img class="img-dog-login" src="./assets/images/foto_perro.svg">
 
   <div class="container-login">
-    <img class="logo" src="./assets/images/logo_kompi.png">
+    <img class="logo" src="./assets/images/version_negro_logo.svg">
     <div class="card-login">
-      <p class="p-title">Iniciar sesión</p>
-      <p>E-MAIL</p>
+      <!-- <p class="p-title">Iniciar sesión</p> -->
+      <p>E-mail</p>
       <input class="input-email">
-      <p>CONTRASEÑA</p>
+      <p>Contraseña</p>
       <input class="input-password" type="password">
       <div class="button btn-login-email"><span>Continuar</span></div>
-      <div class="button btn-login-google"><img class="google" src="./assets/icons/icon_google.png"><span>Inicia sesión con Google</span></div>
-      <div class="button btn-login-facebook"><img class="google" src="./assets/icons/icon_facebook.png"><span>Inicia sesión con Facebook</span></div>
+      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Inicia sesión con Google</span></div>
+      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Inicia sesión con Facebook</span></div>
     </div>
     <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
