--- a/src/signin.html
+++ b/src/signin.html
@@ -12,22 +12,23 @@
   <title>Document</title>
 </head>
 <body>
-  <img class="img-dog-login" src="./assets/images/foto_perro.png">
+  <img class="img-dog-login" src="./assets/images/foto_perro.svg">
 
   <div class="container-login">
-    <img class="logo" src="./assets/images/logo_kompi.png">
+    <img class="logo" src="./assets/images/version_negro_logo.svg">
     <div class="card-login">
-      <p class="p-title">Regístrate</p>
-      <p>E-MAIL</p>
+      <!-- <p class="p-title">Regístrate</p> -->
+      <p>E-mail <span>*</span></p>
       <input class="input-email">
-      <p>CONTRASEÑA</p>
+      <p>Contraseña <span>*</span></p>
       <input class="input-password" type="password">
-      <p>COMPRUEBA TU CONTRASEÑA</p>
+      <p>Verifica tu contraseña <span>*</span></p>
       <input class="input-password-check" type="password">
       <div class="button btn-login-email"><span>Continuar</span></div>
-      <div class="button btn-login-google"><img class="google" src="./assets/icons/icon_google.png"><span>Regístrate con Google</span></div>
-      <div class="button btn-login-facebook"><img class="google" src="./assets/icons/icon_facebook.png"><span>Regístrate con Facebook</span></div>
+      <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate con Google</span></div>
+      <div class="button btn-signin-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Regístrate con Facebook</span></div>
     </div>
+    <p>¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
   </div>
 
   <script type="module" src="./js/signin.js"></script>
