little errors changed

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="card-extra">
           <img class="card-logo" src="./assets/Icono_logo.svg" alt="logo-img">
-          <p class="card-text">+315 mascotas disponibles en kompi</p>
+          <p class="card-text"><span>+315 mascotas</span> disponibles en kompi</p>
           <a class="card-link" href="#VerTodas">VER TODAS</a>
         </div>
       </div>
@@ -105,8 +105,13 @@
       </div>
     </section>
 
-    <section class="prueba">
-
+    <section class="adoption-process">
+      <h2>¿Quieres dar en adopción?</h2>
+      <div class="adoption-process-container">
+          <div class="process">
+            
+          </div>
+      </div>
     </section>
 </body>
 </html>
