first part for adoption process

--- a/src/index.html
+++ b/src/index.html
@@ -108,9 +108,28 @@
     <section class="adoption-process">
       <h2>¿Quieres dar en adopción?</h2>
       <div class="adoption-process-container">
-          <div class="process">
-            
+          <img src="#" alt="Sign-in-image">
+          <img src="#" alt="Publish-image">
+          <img src="#" alt="Notifications-image">
+
+          <!-- SUG:Los h4 y los img podrian ir dentro de un div separados -->
+
+          <div class="adoption-process-prueba">
+            <img src="" alt="number1-icon">
+            <h4>registrate en la web</h4>
           </div>
+
+          <!-- <h4><img src="#" alt="number1-icon"> registrate en la web</h4> -->
+          <h4><img src="#" alt="number2-icon"> Publica una adopción</h4>
+          <h4><img src="#" alt="number3-icon"> ¡Recibe notificaciones!</h4>
+
+          <p>Regístrate en dos sencillos pasos.
+          ¡No te llevará más de 1 min!</p>
+          <p>Crea la publicación añadiendo características e información relevante de la mascota.
+          ¡No te olvides de las fotos!</p>
+          <p>Se te notificará cuando alguien esté 
+            interesado en el animal y serás tú quien
+             cierre el acuerdo.</p>
       </div>
     </section>
 </body>
