second part for adoption process

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Kompi | Buscador de animales</title>
+  <link rel="icon" href="./assets/pestaña_icono_logo.svg">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,7 +84,7 @@
           <h3 class="card-name">Gus</h3>
         </div>
         <div class="card-extra">
-          <img class="card-logo" src="./assets/Icono_logo.svg" alt="logo-img">
+          <img class="card-logo" src="./assets/Icono_logo_blanco.svg" alt="logo-img">
           <p class="card-text"><span>+315 mascotas</span> disponibles en kompi</p>
           <a class="card-link" href="#VerTodas">VER TODAS</a>
         </div>
