second part for adoption process

--- a/src/index.html
+++ b/src/index.html
@@ -133,5 +133,9 @@
              cierre el acuerdo.</p>
       </div>
     </section>
+
+    <section class="regular-questions">
+      
+    </section>
 </body>
 </html>
