ancla al login creada

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <a href="#SobreNosotros">Sobre Nosotros</a>
       <a href="#Like"><img src="./assets/like-svgrepo-com.svg" alt="Like-icon"></a>
       <div class="vertical-line"></div>
-      <a href="#LogIn">Iniciar Sesión</a>
+      <a href="./login.html">Iniciar Sesión</a>
     </nav>
   </section>
 
@@ -56,7 +56,7 @@
         <div class="reptiles">
           <a href=""><img src="./assets/reptiles.svg" alt=""></a>
         </div>
-      </div>  
+      </div>
     </section>
 
     <section class="animal-adoptions">
