ancla a login y signin

--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,11 @@
   <img class="img-dog-login" src="./assets/images/foto_perro.svg">
 
   <div class="container-login">
-    <img class="logo" src="./assets/images/version_negro_logo.svg">
+
+    <a href="./index.html">
+      <img class="logo" src="./assets/images/version_negro_logo.svg">
+    </a>
+
     <div class="card-login">
       <!-- <p class="p-title">Iniciar sesión</p> -->
       <p>E-mail</p>
