title header and icon

--- a/src/login.html
+++ b/src/login.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
     <!--Font-Family: Open Sans and Lato -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Log In</title>
+  <link rel="icon" href="./assets/pestaña_icono_logo.svg">
 </head>
 <body>
   <img class="img-dog-login" src="./assets/images/foto_perro.svg">
