funcionalidad anadir imagenes a storage implementada

--- a/src/authprove.html
+++ b/src/authprove.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <button class="signin">Sign in</button>
-    <button class="login">Log in</button>
+    <button class="btn-login-email">Log in</button>
     <button class="logout">Log out</button>
     <button class="logGoogle">Log in with Google</button>
     <button class="logFacebook">Log in with Facebook</button>
@@ -33,11 +33,11 @@
     <button class="muestraanimales">Mostrar animales</button>
   </div>
 
-  <div class="animales"></div>
+  <input class="fileinput" type="file" value="Subir archivo" accept="image/*">
+  <button class="upload">Subir imagen</button>
 
   <!--Firebase scripts-->
-
-<!--<script type="module" src="./js/index.js"></script>-->
+  <script src="./js/fbstorage.js" type="module"></script>
 
 </body>
 </html>
