lista de animales con storage (error de cliente)

--- a/src/authprove.html
+++ b/src/authprove.html
@@ -35,9 +35,14 @@
 
   <input class="fileinput" type="file" value="Subir archivo" accept="image/*">
   <button class="upload">Subir imagen</button>
+  <button class="showimages">Ver imagenes</button>
+
+  <div class="animales"></div>
 
   <!--Firebase scripts-->
   <script src="./js/fbstorage.js" type="module"></script>
+  <script src="./js/fbfirestore.js" type="module"></script>
+  <script src="./js/authprove.js" type="module"></script>
 
 </body>
 </html>
