--- a/src/index.html
+++ b/src/index.html
@@ -19,24 +19,16 @@
 
 <body>
   <header class="topbar">
-    <a href="index.html"><img class="logo" src="./assets/logo_versioncolor.png" alt="Logo"></a>
-    <nav class="topbar-nav">
-      <a href="#Adopcion">Adopción</a>
-      <a href="#Categorias">Categorias</a>
-      <a href="#SobreNosotros">Sobre Nosotros</a>
-      <a href="#Like"><img src="./assets/like-svgrepo-com.svg" alt="Like-icon"></a>
-      <div class="vertical-line"></div>
-      <a href="./login.html">Iniciar Sesión</a>
-    </nav>
+    <a href="index.html"><img class="logo" src="./assets/icons/version_primario_logo.svg" alt="Logo"></a>
     <div class="menu-toggle menuClick"></div>
-    <nav class="mobile-nav">
-      <a href="#Adopcion" class="menuClick">Adopción</a>
-      <a href="#Categorias" class="menuClick">Categorias</a>
-      <a href="#SobreNosotros" class="menuClick">Sobre Nosotros</a>
-      <a href="#Like" class="menuClick"><img src="./assets/like-svgrepo-com.svg" alt="Like-icon"></a>
+    <ul class="nav">
+      <li><a href="#Adopcion">Adopción</a></li>
+      <li><a href="#Categorias">Categorias</a></li>
+      <li><a href="#SobreNosotros">Sobre nosotros</a></li>
+      <li><a href="#Like"><img src="./assets/icons/corazon_icono.svg" alt="icono me gusta"></a></li>
       <div class="vertical-line"></div>
-      <a href="./login.html" class="menuClick">Iniciar Sesión</a>
-    </nav>
+      <li><a href="./login.html">Iniciar sesión</a></li>
+    </ul>
   </header>
 
 
