--- a/src/login.html
+++ b/src/login.html
@@ -27,6 +27,7 @@
       <input class="input-email">
       <p>Contraseña</p>
       <input class="input-password" type="password">
+      <p class="forgot-pass"><a  href="#">¿Has olvidado tu contraseña?</a></p>
       <div class="button btn-login-email"><span>Continuar</span></div>
       <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Inicia sesión con Google</span></div>
       <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Inicia sesión con Facebook</span></div>
