--- a/src/newuser.html
+++ b/src/newuser.html
@@ -24,38 +24,39 @@
     <div class="card-login">
       <!-- <p class="p-title">Regístrate</p> -->
       <p>Nombre <span>*</span></p>
-      <input class="input-email">
+      <input class="input-name">
       <p>Apellidos <span>*</span></p>
-      <input class="input-password">
+      <input class="input-surname">
 
       <div class="double-input">
         <div class="input-container">
           <p>DNI, NIE, Pasaporte <span>*</span></p>
-          <input class="input-password">
+          <input class="input-dni">
         </div>
-        <div class="input-container">
+        <div class="input-container input-container-date">
           <p>Fecha de nacimiento <span>*</span></p>
-          <input class="input-password">
+          <input class="input input-birthdate" type="date">
         </div>
-        <div class="input-container">
+        <div class="input-container input-container-province">
           <p>Provincia <span>*</span></p>
-          <input class="input-password">
+          <select name="select" class="form-control"></select>
         </div>
         <div class="input-container">
           <p>Localidad <span>*</span></p>
-          <input class="input-password">
+          <input class="input input-location">
         </div>
       </div>
 
       <p>Dirección <span>*</span></p>
-      <input class="input-password-check">
+      <input class="input-direction">
       <p>Número de teléfono <span>*</span></p>
-      <input class="input-password-check">
-      <div class="button btn-login-email"><span>Continuar</span></div>
+      <input class="input-phone">
+      <div class="button btn-login-email btn-continue"><span>Continuar</span></div>
     </div>
     <p>¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
   </div>
 
-  <script type="module" src="./js/signin.js"></script>
+  <script type="module" src="./js/newuser.js"></script>
+
 </body>
 </html>
