--- a/src/signin.html
+++ b/src/signin.html
@@ -29,7 +29,7 @@
       <input class="input-password" type="password">
       <p>Verifica tu contraseña <span>*</span></p>
       <input class="input-password-check" type="password">
-      <div class="button btn-login-email"><span>Continuar</span></div>
+      <div class="button btn-signin-email"><span>Continuar</span></div>
       <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate con Google</span></div>
       <div class="button btn-signin-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Regístrate con Facebook</span></div>
     </div>
