input error sign anadidos

--- a/src/form-user.html
+++ b/src/form-user.html
@@ -56,6 +56,6 @@
             <button class="btn-ver-animales">Iniciar búsqueda</button>
         </div>
     </div>
-<!-- <script src="./js/form-user.js" type="module"></script> -->
+    <script src="./js/form-user.js" type="module"></script>
 </body>
 </html>
