--- a/src/signin.html
+++ b/src/signin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
   <link rel="stylesheet" href="./css/login.css">
   <!--Font-Family: Dosis -->
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
-    <!--Font-Family: Open Sans and Lato -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <!--Font-Family: Open Sans and Lato -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap"
+    rel="stylesheet">
   <title>Sign in</title>
   <link rel="icon" href="./assets/pestaña_icono_logo.svg">
 </head>
+
 <body>
   <img class="img-dog-login" src="./assets/images/foto_perro.svg">
 
@@ -21,21 +24,43 @@
       <img class="logo" src="./assets/images/version_negro_logo.svg">
     </a>
 
-    <div class="card-login">
-      <!-- <p class="p-title">Regístrate</p> -->
+    <form class="card-login">
+
       <p>E-mail <span>*</span></p>
-      <input class="input-email">
+      <input class="input-email" type="email" required="required">
+
       <p>Contraseña <span>*</span></p>
-      <input class="input-password" type="password">
+      <input name="password" id="password" type="password" required="required" pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" onkeyup='check();' />
+      <p>Utiliza ocho caracteres como mínimo con una mayuscula, una minúscula, un número y un caracter especial</p>
+
       <p>Verifica tu contraseña <span>*</span></p>
-      <input class="input-password-check" type="password">
-      <div class="button btn-signin-email"><span>Continuar</span></div>
-      <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate con Google</span></div>
-      <div class="button btn-signin-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Regístrate con Facebook</span></div>
-    </div>
+      <input class="input-password-check" type="password" name="confirm_password" id="confirm_password" required="required"
+        onkeyup='check();'>
+      <span id='message'></span>
+
+     <button type="submit" class="button btn-signin-email">Continuar</button>
+
+      <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate
+          con Google</span></div>
+      <div class="button btn-signin-facebook"><img class="facebook"
+          src="./assets/icons/facebook_icono.svg"><span>Regístrate con Facebook</span></div>
+    </form>
     <p>¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
   </div>
 
   <script type="module" src="./js/signin.js"></script>
+
+  <script>
+    var check = function () {
+      if (document.getElementById('password').value ==
+        document.getElementById('confirm_password').value) {
+        document.getElementById('message').style.color = 'green';
+        document.getElementById('message').innerHTML = '';
+      } else {
+        document.getElementById('message').style.color = 'red';
+        document.getElementById('message').innerHTML = 'Las contraseñas no coinciden. Inténtalo de nuevo.';
+      }
+    }
+  </script>
 </body>
 </html>
