reestuctaración mobilefirst finish

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
   <section class="adoption">
 
     <h2>Animales <br>en adopción</h2>
-    <p class="text">Aquí tienes algunas de las últimas<br> mascotas en adopción</p>
+    <p class="text">Aquí tienes algunas de las últimas mascotas en adopción</p>
 
     <div class="group">
       <div class="card">
@@ -126,13 +126,18 @@
         <p><img src="./assets/icons/icono_logo.svg" alt="">Teide</p>
       </div>
       <div class="card-extra">
-        <img src="./assets/icons/icono_logo.svg" alt="logo-img">
-        <p><span>+315 mascotas<br></span> disponibles en kompi</p>
+        <img src="./assets/icons/icono_logo_blanco.svg" alt="logo-img">
+        <p><span>+315 mascotas</span></p>
+        <p>disponibles en kompi</p>
         <div class=" horizontal-line"></div>
         <a class="button" href="#VerTodas">Ver más</a>
       </div>
+
+
+
     </div>
 
+    <a class="button more" href="#VerTodas">Ver más</a>
   </section>
 
 
@@ -334,16 +339,16 @@
 
       <div class="column">
         <h4>Información</h4>
-        <a href="#">Sobre Nosotros</a>
-        <a href="#">Busca Una Mascota</a>
-        <a href="#">Contactanos</a>
+        <a href="#">Sobre nosotros</a>
+        <a href="#">Busca una mascota</a>
+        <a href="#">Contáctanos</a>
       </div>
 
       <div class="column three">
         <h4>Acerca de...</h4>
-        <a href="#">Política De Privacidad</a>
-        <a href="#">Términos y Condiciones</a>
-        <a href="#">Preguntas Frecuentes</a>
+        <a href="#">Política de privacidad</a>
+        <a href="#">Términos y condiciones</a>
+        <a href="#">Preguntas frecuentes</a>
       </div>
     </div>
 
