--- a/src/login.html
+++ b/src/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,20 @@
   <link rel="stylesheet" href="./css/login.css">
   <!--Font-Family: Dosis -->
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
-    <!--Font-Family: Open Sans and Lato -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!--Font-Family: Open Sans and Lato -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700&display=swap"
+    rel="stylesheet">
   <title>Log In</title>
   <link rel="icon" href="./assets/pestaña_icono_logo.svg">
 </head>
+
 <body>
   <img class="img-dog-login" src="./assets/images/foto_perro.svg">
 
   <div class="container-login">
 
     <a href="./index.html">
-      <img class="logo" src="./assets/images/version_negro_logo.svg">
+      <img class="logo" src="./assets/icons/version_negro_logo.svg">
     </a>
 
     <div class="card-login">
@@ -28,12 +31,15 @@
       <p>Contraseña</p>
       <input class="input-password" type="password">
       <div class="button btn-login-email"><span>Continuar</span></div>
-      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Inicia sesión con Google</span></div>
-      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"><span>Inicia sesión con Facebook</span></div>
+      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Inicia sesión
+          con Google</span></div>
+      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/icono_facebook.svg"><span>Inicia
+          sesión con Facebook</span></div>
     </div>
     <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
 
   <script type="module" src="./js/login.js"></script>
 </body>
+
 </html>
