--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,13 @@
           </ul>
           <!-- <a href="./login.html" class="m-contact">Contáctanos</a> -->
           <div class="icons">
-            <a href="https://www.facebook.com/profile.php?id=100079663393852"><img
-                src="./assets/icons/icono_facebook.svg" alt=""></a>
-            <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg" alt=""></a>
-            <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" alt=""></a>
-            <a href="./login.html"><img src="./assets/icons/corazon_icono.svg" alt="icono me gusta" class="heart"></a>
+            <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook_yellow.svg"
+                alt="facebook"></a>
+            <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram_yellow.svg"
+                alt="instagram"></a>
+            <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter_yellow.svg"
+                alt="twitter"></a>
+            <a href="./login.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos" class="heart"></a>
           </div>
           <div class="m-footer">
             <a href="./login.html" class="button">Iniciar sesión</a>
@@ -56,7 +58,7 @@
         <li><a href="#Adopcion">Adopción</a></li>
         <li><a href="#Categorias">Categorías</a></li>
         <li><a href="#SobreNosotros">Sobre nosotros</a></li>
-        <li><a href="#Like"><img src="./assets/icons/corazon_icono.svg" alt="icono me gusta"></a></li>
+        <li><a href="#Like"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
         <div class="vertical-line"></div>
         <li><a href="./login.html">Iniciar sesión</a></li>
       </ul>
@@ -67,7 +69,7 @@
   <!-- ----------------------------------HOME---------------------------------- -->
   <main class="home">
 
-    <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="">ptado</h1>
+    <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
     <a href="" class="button">Comenzar búsqueda</a>
 
@@ -79,19 +81,19 @@
 
     <div class="icon">
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_perro.svg" alt=""></a>
+        <a href=""> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
       </div>
       <div class="shadow">
-        <a href=""><img src="./assets/icons/icono_gato.svg" alt=""></a>
+        <a href=""><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
       </div>
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_pajaro.svg" alt=""></a>
+        <a href=""> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
       </div>
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_roedor.svg" alt=""></a>
+        <a href=""> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
       </div>
       <div class="shadow">
-        <a href=""><img src="./assets/icons/icono_reptil.svg" alt=""></a>
+        <a href=""><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
       </div>
     </div>
 
@@ -106,31 +108,32 @@
 
     <div class="group">
       <div class="card">
-        <img src="./assets/bordercollie_smiling.jpg" alt="Nala-img">
+        <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
         <h3 class="name">Nala</h3>
         <p><img src="./assets/icons/icono_logo.svg" alt="">Las Pedroñeras</p>
       </div>
       <div class="card">
-        <img src="./assets/imgYorkshire.jpg" alt="Chico-img">
+        <img src="./assets/imgYorkshire.jpg" alt="mascota">
         <h3 class="name">Chico</h3>
         <p><img src="./assets/icons/icono_logo.svg" alt="">Arona</p>
       </div>
       <div class="card">
-        <img src="./assets/imgSleapingCat.jpg" alt="Coco-img">
+        <img src="./assets/imgSleapingCat.jpg" alt="mascota">
         <h3 class="name">Coco</h3>
         <p><img src="./assets/icons/icono_logo.svg" alt="">Córdoba</p>
       </div>
       <div class="card">
-        <img src="./assets/whitebrown_hamster.jpg" alt="Gus-img">
+        <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
         <h3 class="name">Gus</h3>
         <p><img src="./assets/icons/icono_logo.svg" alt="">Teide</p>
       </div>
       <div class="card-extra">
-        <img src="./assets/icons/icono_logo_blanco.svg" alt="logo-img">
+        <img src="./assets/icons/icono_logo_blanco.svg" alt="logo Kompi">
         <p><span>+315 mascotas</span></p>
         <p>disponibles en kompi</p>
-        <div class=" horizontal-line"></div>
-        <a class="button" href="#VerTodas">Ver más</a>
+        <div class="footer">
+          <a class="button" href="#VerTodas">Ver más</a>
+        </div>
       </div>
 
 
@@ -169,7 +172,7 @@
         <div class="circle">
           <p>1</p>
         </div>
-        <img src="./assets/icono_notificaciones.svg" alt="Sign-in-image">
+        <img src="./assets/icono_notificaciones.svg" alt="Registro">
         <h3>Regístrate en la web</h3>
         <p>Regístrate en dos sencillos pasos.</p>
         <p>¡No te llevará más de 1 min!</p>
@@ -178,7 +181,7 @@
         <div class="circle">
           <p>2</p>
         </div>
-        <img src="./assets//icono_publica.svg" alt="Publish-image">
+        <img src="./assets//icono_publica.svg" alt="Publicar">
         <h3>Publica una adopción</h3>
         <p>Crea la publicación añadiendo características e información relevante de la mascota.</p>
         <p>¡No te olvides de las fotos!</p>
@@ -187,7 +190,7 @@
         <div class="circle">
           <p>3</p>
         </div>
-        <img src="./assets/icono_registra.svg" alt="Notifications-image">
+        <img src="./assets/icono_registra.svg" alt="Notificaciones">
         <h3>¡Recibe notificaciones!</h3>
         <p>Se te notificará cuando alguien esté interesado en el animal y serás tú quien cierre el acuerdo.</p>
       </div>
@@ -330,22 +333,23 @@
         <a href="#"><img class="logo" src="./assets/icons/version_blanca_logo.svg"></a>
         <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
         <div class="social">
-          <a href="https://www.facebook.com/profile.php?id=100079663393852"><img src="./assets/icons/icono_facebook.svg"
-              alt=""></a>
-          <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg" alt=""></a>
-          <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" alt=""></a>
+          <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg"
+              alt="facebook"></a>
+          <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg"
+              alt="instagram"></a>
+          <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" alt="twitter"></a>
         </div>
       </div>
 
       <div class="column">
-        <h4>Información</h4>
+        <p>Información</p>
         <a href="#">Sobre nosotros</a>
         <a href="#">Busca una mascota</a>
         <a href="#">Contáctanos</a>
       </div>
 
       <div class="column three">
-        <h4>Acerca de...</h4>
+        <p>Acerca de...</p>
         <a href="#">Política de privacidad</a>
         <a href="#">Términos y condiciones</a>
         <a href="#">Preguntas frecuentes</a>
